@@ -6,8 +6,10 @@ ChangeLog
 
 GIT HEAD
 
+- JACK client watchdog introduced for automatic reactivation and
+  resilience (standalone only). (EXPERIMENTAL)
 - NSM announcement reply/error messages now relegated to debug
-  builds only (stderr). (EXPERIMENTAL)
+  builds only. (EXPERIMENTAL)
 
 
 0.9.29  2023-01-25  A Winter'23 Release.
